docs: update index.html licence/support info

--- a/index.html
+++ b/index.html
@@ -45,6 +45,24 @@
                 Typical AftGangAglay applications are themselves the payload executed by the engine, and do not link
                 against or modify any GPLv3 licenced code.
             </P>
+            <P>
+                Runtime components used directly by AftGangAglay applications such as the script support library are
+                licenced under the GNU LGPLv3 licence to allow greater flexibility to the user with their source
+                distribution/availability model.
+            </P>
+            <H2>Support</H2>
+            <P>
+                If you're thinking of support <EM>to</EM> the project - the best way is to just use it; find bugs, open
+                issues, send PRs for all the important features I missed.
+            </P>
+            <P>
+                If you're thinking of support <EM>from</EM> the project - I can't offer any formal support avenues at
+                the moment, but you can send me an email (<A HREF="mailto:prs.ttg+aga@pm.me">prs.ttg+aga@pm.me</A>) and
+                I'll try my best to help if I can.
+            </P>
+            <HR>
         </CENTER>
-    </BODY>
+        <IMG SRC="https://www.gnu.org/graphics/gplv3-127x51.png">
+        <IMG SRC="https://www.gnu.org/graphics/lgplv3-147x51.png">
+        </BODY>
 </HTML>
