docs: add title section logo to index.html

--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!-- SPDX-License-Identifier: GPL-3.0-or-later -->
 <!-- Copyright (C) 2023 Emily "TTG" Banerjee <prs.ttg+aga@pm.me> -->
 
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE
+    HTML
+    PUBLIC
+    "-//W3C//DTD HTML 4.01 Transitional//EN"
+    "http://www.w3.org/TR/html4/loose.dtd">
 <HTML>
     <HEAD>
         <TITLE>AftGangAglay</TITLE>
-        <LINK REL="ICON" TYPE="IMAGE/SVG" HREF="https://raw.githubusercontent.com/AftGangAglay/AftGangAglay/trunk/res/aga.svg">
+        <LINK
+            REL="ICON"
+            TYPE="IMAGE/SVG"
+            HREF="https://raw.githubusercontent.com/AftGangAglay/AftGangAglay/trunk/res/aga.svg">
     </HEAD>
     <BODY>
         <CENTER>
+            <IMG
+                SRC="https://raw.githubusercontent.com/AftGangAglay/AftGangAglay/trunk/res/aga.svg"
+                WIDTH="72"
+                HEIGHT="72">
             <H1>AftGangAglay</H1>
             <I>The best laid plans of mice and men...</I>
             <HR>
