docs: update index.html image/charset metadata

--- a/index.html
+++ b/index.html
@@ -6,20 +6,25 @@
     PUBLIC
     "-//W3C//DTD HTML 4.01 Transitional//EN"
     "http://www.w3.org/TR/html4/loose.dtd">
-<HTML>
+<HTML LANG="EN">
     <HEAD>
         <TITLE>AftGangAglay</TITLE>
         <LINK
             REL="ICON"
             TYPE="IMAGE/SVG"
             HREF="https://raw.githubusercontent.com/AftGangAglay/AftGangAglay/trunk/res/aga.svg">
+
+        <META NAME="VIEWPORT" CONTENT="WIDTH=DEVICE-WIDTH">
+        <META CHARSET="UTF-8">
     </HEAD>
     <BODY>
         <CENTER>
             <IMG
                 SRC="https://raw.githubusercontent.com/AftGangAglay/AftGangAglay/trunk/res/aga.svg"
+                TYPE="IMAGE/SVG"
                 WIDTH="72"
-                HEIGHT="72">
+                HEIGHT="72"
+                ALT="AftGangAglay logo">
             <H1>AftGangAglay</H1>
             <I>The best laid plans of mice and men...</I>
             <HR>
@@ -73,7 +78,13 @@
             </P>
             <HR>
         </CENTER>
-        <IMG SRC="https://www.gnu.org/graphics/gplv3-127x51.png">
-        <IMG SRC="https://www.gnu.org/graphics/lgplv3-147x51.png">
+        <IMG
+            SRC="https://www.gnu.org/graphics/gplv3-127x51.png"
+            TYPE="IMAGE/PNG"
+            ALT="GNU GPLv3 logo">
+        <IMG
+            SRC="https://www.gnu.org/graphics/lgplv3-147x51.png"
+            TYPE="IMAGE/PNG"
+            ALT="GNU LGPLv3 logo">
         </BODY>
 </HTML>
