docs: started constructing basic documentation tree

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <H1>AftGangAglay</H1>
             <I>The best laid plans of mice and men...</I>
             <HR>
-            <BR>
+            <H2>Overview</H2>
             <P>
                 AftGangAglay (or AGA) is a game engine project aiming to build an architecturally modern C codebase
                 using technologies which existed at the time of OpenGL 1.0's original specification (June 1992).
@@ -43,14 +43,19 @@
             <P>
                 All components of AftGangAglay are available as open source software under
                 <A HREF="https://github.com/AftGangAglay">the AftGangAglay Github organisation</A>.
-                The main engine <A HREF="https://github.com/AftGangAglay/AftGangAglay">can be found here</A>,
+                
+                Releases of the main engine repo
+                <A HREF="https://github.com/AftGangAglay/AftGangAglay/releases">can be found here</A>,
                 with build instructions provided in the <TT>INSTALL</TT> file in the root directory.
-
-                <!-- TODO: Prebuilt Binaries -->
+                <BR>
+                Prebuilt binaries are only provided for x86_64 Windows right now.
             </P>
             <H2>Documentation</H2>
             <P>
-                <!-- TODO -->
+                Documentation for the latest release is provided <A HREF="docs/0.1.0/index.html">here</A> along with
+                conceptual information and a guide on getting started using AftGangAglay.
+                <BR>
+                Full archives of this documentation are also provided alongside releases.
             </P>
             <H2>Licence</H2>
             <P>
