misc: introduce project rationale essay

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
                 are architected using an early version of the Python programming language which calls into a native
                 script interface which exposes the featureset of the engine.
             </P>
+            <P>
+                For more general project information, you may refer to the
+                <A HREF="rationale.html">rationale document</A> or the
+                <A HREF="https://raw.githubusercontent.com/AftGangAglay/AftGangAglay/trunk/README"><TT>README</TT></A>
+                file of the main repository.
+            </P>
             <H2>Downloads</H2>
             <P>
                 All components of AftGangAglay are available as open source software under
