misc: update index to use mdash and reword contrib plea

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
 			</P>
 			<H2>Support</H2>
 			<P>
-				If you're thinking of support <EM>to</EM> the project - the best way is to just use it; find bugs, open
+				If want to support the project &mdash; the best way is to just use it; find bugs, open
 				issues, send PRs for all the important features I missed.
 			</P>
 			<P>
-				If you're thinking of support <EM>from</EM> the project - I can't offer any formal support avenues at
+				If you're thinking of support <EM>from</EM> the project &mdash; I can't offer any formal support avenues at
 				the moment, but you can send me an email (<A HREF="mailto:prs.ttg+aga@pm.me">prs.ttg+aga@pm.me</A>) and
 				I'll try my best to help if I can.
 			</P>
